# BasicApiComparison

./: README.md  docker-compose.dev-dependencies.yml  docker-compose.yml  init.sql
.github/workflows/: deploy.yml
bun/hono/: Dockerfile  README.md  bun.lockb  index.ts  package.json
bun/raw/: README.md  bun.lockb  index.ts  package.json
dotnet/: BasicApiLoadTestingSample.sln
dotnet/src/Api/: Api.csproj  Dockerfile.aot  Dockerfile.default  Dockerfile.r2r  Program.cs
dotnet/src/ApiControllers/: ApiControllers.csproj  Dockerfile  Program.cs  appsettings.Development.json
dotnet/src/ApiFSharp/: ApiFSharp.fsproj  Dockerfile  Program.fs
gleam/api/: .gitignore  README.md  gleam.toml  manifest.toml
gleam/api/src/: api.gleam
go/: .env  Dockerfile  go.mod  go.sum  main.go
k6/: run-all.ps1  run-all.sh  script.js
kotlin/: .dockerignore  Dockerfile  build.gradle.kts  gradle.properties
kotlin/src/main/kotlin/basicapicomparison/: Application.kt
node/express/: package-lock.json  package.json  server.js
node/raw/: Dockerfile  app.js  package-lock.json  package.json  server.js
pulumi/: Pulumi.yaml  index.ts  package-lock.json  package.json
python/: .dockerignore  Dockerfile  requirements.txt
python/app/: fastapi_conf.py  main.py
rust/: .gitignore  Cargo.toml  Dockerfile  requests.http
rust/actix/: Dockerfile
rust/actix/src/: main.rs
rust/axum/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  requests.http
rust/axum/src/: main.rs
rust/src/: main.rs
