[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = "0"
deadpool-postgres = "0"
tokio-postgres-rustls = "0"
tokio-rustls = "0"
rustls = { version = "0", features = [] }
rustls-native-certs = "0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # LTO instructs the linker to optimize at the link stage. This can, for example, remove dead code and often times reduces binary size.
panic = "abort" # abort on panic instead of unwind, doesn't produce nice errors anymore
codegen-units = 1 # more size/performance optimisations at the cost of no more compilation paralellism
